--- a/education.html
+++ b/education.html
@@ -63,6 +63,13 @@
                                     <li>Marriott School of Business.</li>
                                 </ul>
                             </li>
+                            <li>
+                                Rio Rancho High School
+                                <ul>
+                                    <li>2017-2019</li>
+                                    <li>Diploma of Distinction</li>
+                                </ul>
+                            </li>
                         </ol>
                     </div>
                 </div>
