--- a/experience.html
+++ b/experience.html
@@ -57,17 +57,15 @@
                         <p>
                             I have had multiple jobs throughout the years but these are the most recent in my life.</p>
                         <ol>
-                            <li>Excel Eye Center
-                                <div>Optician</div>
-                                2022 - present
+                            <li>Excel Eye Center Optician
+                                <br>2022 - present
                                 <ul>
                                     <li>Serve and work directly with 17 doctors and a team of 11 opticians to ensure patient satisfaction and accuracy with every prescription </li>
                                     <li>Create custom eyeglass lenses and frames using latest technology to best address the root cause of issues impairing vision for patients</li>
                                     <li>Persistently stay abreast of current technologies and fashion trends to create lenses with precise optics and style conscious design</li>
                                 <ul>
                             <li>      
-                             <br>
-                             <li>Sam's Club
+                            <li>Sam's Club
                                 <div>Cafe Associate</div>
                                     2021 - 2022
                                     <ul>
