--- a/experience.html
+++ b/experience.html
@@ -64,15 +64,15 @@
                                     <li>Create custom eyeglass lenses and frames using latest technology to best address the root cause of issues impairing vision for patients</li>
                                     <li>Persistently stay abreast of current technologies and fashion trends to create lenses with precise optics and style conscious design</li>
                                 <ul>
+                                    <br>
                             <li>      
-                            <li>Sam's Club
-                                <div>Cafe Associate</div>
-                                    2021 - 2022
-                                    <ul>
-                                        <li>Ensured cleanliness, maintained temperature control, verified expiration dates, and disposed of lesser-quality food products </li>
-                                        <li>Communicated with team members, and helped educate other associates on tools, tasks, and resources</li>
-                                        <li>Assisted members with purchasing decisions, payment types, provided member service by acknowledging and identifying solutions for customer’s problems</li>
-                                    <ul>
+                            <li>Sam's Club Cafe Associate
+                                <br>2021 - 2022
+                                <ul>
+                                    <li>Ensured cleanliness, maintained temperature control, verified expiration dates, and disposed of lesser-quality food products </li>
+                                    <li>Communicated with team members, and helped educate other associates on tools, tasks, and resources</li>
+                                    <li>Assisted members with purchasing decisions, payment types, provided member service by acknowledging and identifying solutions for customer’s problems</li>
+                                <ul>
                             </li>
                         <ol> 
                         </p>
