--- a/experience.html
+++ b/experience.html
@@ -58,17 +58,16 @@
                             I have had multiple jobs throughout the years but these are the most recent in my life.</p>
                         <ol>
                             <li>Excel Eye Center Optician
-                                <br>2022 - present
                                 <ul>
+                                    <li>2022 - present</li>
                                     <li>Serve and work directly with 17 doctors and a team of 11 opticians to ensure patient satisfaction and accuracy with every prescription </li>
                                     <li>Create custom eyeglass lenses and frames using latest technology to best address the root cause of issues impairing vision for patients</li>
                                     <li>Persistently stay abreast of current technologies and fashion trends to create lenses with precise optics and style conscious design</li>
                                 <ul>
-                                    <br>
                             <li>      
                             <li>Sam's Club Cafe Associate
-                                <br>2021 - 2022
                                 <ul>
+                                    <li>2021 - 2022</li>
                                     <li>Ensured cleanliness, maintained temperature control, verified expiration dates, and disposed of lesser-quality food products </li>
                                     <li>Communicated with team members, and helped educate other associates on tools, tasks, and resources</li>
                                     <li>Assisted members with purchasing decisions, payment types, provided member service by acknowledging and identifying solutions for customer’s problems</li>
