--- a/graph.html
+++ b/graph.html
@@ -20,6 +20,7 @@
                                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="experience.html">Experience</a></li>
                                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="skills.html">Skills</a></li>
                                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="graph.html">Graph</a></li>
+                                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="freestyle.html">Freestyle</a></li>
                                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
                             </ul>
                         </div>
