--- a/freestyle.html
+++ b/freestyle.html
@@ -81,5 +81,12 @@
 
     <h5>This is my freestyle page, </h5>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/x-M1sBvpcoM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <!-- Add anchor link to top of page -->
+    <a href="#top">Back to top</a>
+  
+     <p>More text on my page.</p>
+  
+         <!-- Add anchor tag with an ID of "top" to the top of the page -->
+     <a id="top"></a>
     <body>
 </html>
